overflow fix css

--- a/src/Pages/TeamSetup/setup.modules.css
+++ b/src/Pages/TeamSetup/setup.modules.css
@@ -1,11 +1,9 @@
 .field {
   display: flex;
-  /* justify-content: center; */
   flex-direction: column;
-  /* align-items: center; */
 
   width: 100%;
-  /* height: 100%; */
+  overflow: hidden;
 }
 
 .soccer-field {
